[#51] More spacing and badge fix

--- a/ckanext/geodatagov/fanstatic_library/styles/datasets.less
+++ b/ckanext/geodatagov/fanstatic_library/styles/datasets.less
@@ -7,7 +7,7 @@
   margin-bottom: 0;
   border-bottom-width: 0;
   .dataset-content {
-    padding: 0 0 25px 0;
+    padding: 0 0 30px 0;
   }
   .dataset-organization {
     display: inline;
@@ -38,17 +38,17 @@
   }
   &.has-organization {
     .dataset-heading {
-      padding-right: 50px;
+      padding-right: 80px;
     }
     .notes {
-      padding-right: 30px;
+      padding-right: 50px;
     }
   }
 }
 
 .results,
 .is-search-title {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   padding-bottom: 5px;
 }
 
