--- a/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
+++ b/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
@@ -528,7 +528,7 @@ a {
   border-bottom-width: 0;
 }
 .dataset-item .dataset-content {
-  padding: 0 0 25px 0;
+  padding: 0 0 30px 0;
 }
 .dataset-item .dataset-organization {
   display: inline;
@@ -556,14 +556,14 @@ a {
   background-color: #333;
 }
 .dataset-item.has-organization .dataset-heading {
-  padding-right: 50px;
+  padding-right: 80px;
 }
 .dataset-item.has-organization .notes {
-  padding-right: 30px;
+  padding-right: 50px;
 }
 .results,
 .is-search-title {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   padding-bottom: 5px;
 }
 .filter-list {
